# quickjspp

./: CMakeLists.txt  qjs.cpp  quickjspp.hpp  readme.md
quickjs/: CMakeLists.txt  init.sh  update.sh
quickjs/patches/: 2025-04-26-add-profiling-support.patch  2025-04-26-freebsd.patch  2025-04-26-getclassid-const.patch  2025-04-26-getpropertyvalue_uninitialized_read_fix.patch  2025-04-26-unhandled_rejection.patch
quickjs/quickjs/: Makefile  qjs.c  quickjs.c  quickjs.h
